day8/nexus/nexus4-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexus-service
  namespace: jenkins
spec:
  ports:
  - port: 8081
    targetPort: 8081
    protocol: TCP
    name: http
  - port: 8083
    targetPort: 8083
    protocol: TCP
    name: http1
  selector:
    app: nexus
