day8/nexus/nexus5-nginx-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nexus-ingress
  namespace: jenkins
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: nexus
    http:
      paths:
      - path: /
        backend:
          serviceName: nexus-service
          servicePort: 8081
